--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Hello Gravity</string>
+    <string name="preferences_log_csv">log_csv</string>
+    <string name="preferences_dmxserver_ip">dmxserver_ip</string>
 </resources>
