--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">Hello Gravity</string>
     <string name="preferences_log_csv">log_csv</string>
     <string name="preferences_dmxserver_ip">dmxserver_ip</string>
+    <string name="preferences_coordinate">coordinate</string>
+    <string name="preferences_stream">stream</string>
 </resources>
